Ultimas alterações banco da aws

--- a/PurpleTask/appsettings.json
+++ b/PurpleTask/appsettings.json
@@ -11,7 +11,7 @@
     "audience": "http://purple.com.br"
   },
   "ConnectionStrings": {
-    "BaseDados": "Server=purple-mgm.cnuc4kqomjtz.sa-east-1.rds.amazonaws.com,1433; Database=purple_mgm; User Id=purple_mgm; Password=purplemgm2010; TrustServerCertificate=True"
+    "BaseDados": "Server=opurple.cstyio4q2s6u.us-east-1.rds.amazonaws.com,1433; Database=purple_mgm; User Id=admin; Password=IY1m2kPKfo75XcfX04U8; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
