--- a/PurpleTask/PurpleTask.csproj
+++ b/PurpleTask/PurpleTask.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <GenerateManifests>false</GenerateManifests>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
