--- a/PurpleTask/appsettings.json
+++ b/PurpleTask/appsettings.json
@@ -11,8 +11,8 @@
     "audience": "http://purple.com.br"
   },
   "ConnectionStrings": {
-    //"BaseDados": "Server=opurple.cstyio4q2s6u.us-east-1.rds.amazonaws.com,1433; Database=purple_mgm; User Id=admin; Password=IY1m2kPKfo75XcfX04U8; TrustServerCertificate=True"
-    "BaseDados": "Server=localhost; Database=purple_mgm; User Id=sa; Password=sa.2014; TrustServerCertificate=True"
+    "BaseDados": "Server=187.45.190.11\\MSSQLSERVER2022; Database=Purple_mgm; User Id=purple_mgm008; Password=Purple_s5l^bP393; TrustServerCertificate=True"
+    //"BaseDados": "Server=localhost; Database=purple_mgm; User Id=sa; Password=sa.2014; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
