Ajustes conversão cast 17-04-2025

--- a/PurpleTask/appsettings.json
+++ b/PurpleTask/appsettings.json
@@ -7,8 +7,8 @@
   },
   "jwt": {
     "secretKey": "purple008",
-    "issuer": "purple.com",
-    "audience": "http://purple.com.br"
+    "issuer": "api.opurple.com.br",
+    "audience": "http://api.opurple.com.br"
   },
   "ConnectionStrings": {
     "BaseDados": "Server=187.45.190.11\\MSSQLSERVER2022; Database=Purple_mgm; User Id=purple_mgm008; Password=Purple_s5l^bP393; TrustServerCertificate=True"
