--- a/PurpleTask/appsettings.json
+++ b/PurpleTask/appsettings.json
@@ -11,7 +11,8 @@
     "audience": "http://servicos.opurple.com.br"
   },
   "ConnectionStrings": {
-    "BaseDados": "Server=localhost; Database=purple_mgm; User Id=sa; Password=sa.2014; TrustServerCertificate=True"
+
+    //"BaseDados": "Server=localhost; Database=purple_mgm; User Id=sa; Password=sa.2014; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
