--- a/PurpleTask/appsettings.json
+++ b/PurpleTask/appsettings.json
@@ -11,7 +11,7 @@
     "audience": "http://servicos.opurple.com.br"
   },
   "ConnectionStrings": {
-
+    "BaseDados": "Server=187.45.190.11\\MSSQLSERVER2022; Database=Purple_mgm; User Id=purple_mgm008; Password=Purple_s5l^bP393; TrustServerCertificate=True"
     //"BaseDados": "Server=localhost; Database=purple_mgm; User Id=sa; Password=sa.2014; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
