Ajustes do dia 22-05-2025

--- a/PurpleTask/appsettings.json
+++ b/PurpleTask/appsettings.json
@@ -8,11 +8,13 @@
   "jwt": {
     "secretKey": "purple008",
     "issuer": "servicos.opurple.com.br",
-    "audience": "http://servicos.opurple.com.br"
+    "audience": "https://opurple.com.br"
+  },
+  "KeyEncript": {
+    "hash": "DIGITE_UMA_HASH"
   },
   "ConnectionStrings": {
-    "BaseDados": "Server=187.45.190.11\\MSSQLSERVER2022; Database=Purple_mgm; User Id=purple_mgm008; Password=Purple_s5l^bP393; TrustServerCertificate=True"
-    //"BaseDados": "Server=localhost; Database=purple_mgm; User Id=sa; Password=sa.2014; TrustServerCertificate=True"
+    "BaseDados": "Server=SERVIDOR; Database=BASEDEDADOS; User Id=USUARIO; Password=SENHA; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
