atualizar itens restantes 22-05-2025

--- a/PurpleTask/appsettings.json
+++ b/PurpleTask/appsettings.json
@@ -11,11 +11,10 @@
     "audience": "https://opurple.com.br"
   },
   "KeyEncript": {
-    "hash": "H5+@#$%{](12ddfdffwFTzBko86<&sdffdfG*=++"
+    "hash": "DIGITE_UMA_HASH"
   },
   "ConnectionStrings": {
-    "BaseDados": "Server=187.45.190.11\\MSSQLSERVER2022; Database=Purple_mgm; User Id=purple_mgm008; Password=Purple_s5l^bP393; TrustServerCertificate=True"
-    //"BaseDados": "Server=SERVIDOR; Database=BASEDEDADOS; User Id=USUARIO; Password=SENHA; TrustServerCertificate=True"
+    "BaseDados": "Server=SERVIDOR; Database=BASEDEDADOS; User Id=USUARIO; Password=SENHA; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
